--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <footer>
         <p>Created using <a href="https://go.dev/" target="_blank">Go</a> and <a href="https://webassembly.org/"
-                target="_blank">Wasm</a>. Repository hosted on <a href="https://github.com/kawasawa/seventools"
+                target="_blank">Wasm</a>. Repository hosted on <a href="https://github.com/kawasawa/seventools/"
                 target="_blank">GitHub</a>.</p>
         <p>© <a href="https://kawasawa.github.io/" target="_blank">Kazuki Awasawa</a> All Rights Reserved.</p>
     </footer>
