--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <main>
         <ul>
-            <li><a href="./crypto/">crypto - AES encryptor</a></li>
+            <li><a href="./base64/">base64 - Base64 encoder</a></li>
+            <li><a href="./crypto/">crypto - AES(SHA-256) encryptor</a></li>
             <li><a href="./random/">random - Random values generator</a></li>
         </ul>
     </main>
