--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css">
+    <meta charset="utf-8">
+    <!-- <link rel="icon" href="/favicon.ico"> -->
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="theme-color" content="#000000">
+    <meta name="description" content="">
+    <!-- <link rel="apple-touch-icon" href="/logo192.png"> -->
+    <!-- <link rel="manifest" href="/manifest.json"> -->
+    <title>seventools</title>
+    <link href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css" rel="stylesheet">
 </head>
 
 <body>
