--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <ul>
             <li><a href="./base64/">base64 - Base64 encoder</a></li>
             <li><a href="./crypto/">crypto - AES(SHA-256) encryptor</a></li>
+            <li><a href="./format/">format - Json formatter</a></li>
             <li><a href="./random/">random - Random values generator</a></li>
         </ul>
     </main>
