deploy: 0c566c7c5017a2225dea3d7f44e862c72ce9a8c5

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <!-- <link rel="icon" href="/favicon.ico"> -->
+    <link rel="icon" href="./favicon.ico">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="#000000">
     <meta name="description" content="">
@@ -22,8 +22,8 @@
         <ul>
             <li><a href="./base64/">base64 - Base64 encoder</a></li>
             <li><a href="./crypto/">crypto - AES(SHA-256) encryptor</a></li>
-            <li><a href="./format/">format - Json formatter</a></li>
             <li><a href="./random/">random - Random values generator</a></li>
+            <li><a href="./format/">format - Json formatter</a></li>
         </ul>
     </main>
 
