--- a/random/index.html
+++ b/random/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
+	<link rel="icon" href="../favicon.ico">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css" rel="stylesheet">
 	<title>seventools</title>
