deploy: c5fbbb98e5442770bbdbc9f9629cb680873e11cb

--- a/random/index.html
+++ b/random/index.html
@@ -68,6 +68,8 @@
 				result.innerHTML += response[`value${i}`];
 			}
 			result.select();
+			result.style.height = "auto";
+			result.style.height = `${result.scrollHeight}px`;
 		}
 	</script>
 </body>
