--- a/base64/index.html
+++ b/base64/index.html
@@ -5,8 +5,10 @@
 	<meta charset="utf-8">
 	<link rel="icon" href="../favicon.ico">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="description" content="Base64 encoder">
+	<title>base64</title>
 	<link href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css" rel="stylesheet">
-	<title>seventools</title>
+	<script src="../utils.js"></script>
 	<script src="../wasm_exec.js"></script>
 	<script>
 		const go = new Go();
@@ -16,14 +18,14 @@
 
 <body>
 	<header>
-		<h1>Base64</h1>
-		<p>Base64 encoder</p>
+		<h1 id="title"></h1>
+		<p id="description"></p>
 	</header>
 
 	<main>
 		<div>
 			<label for="value0">text</label>
-			<input type="text" id="value0" onfocus="this.select();" value="message" />
+			<input id="value0" type="text" onfocus="this.select();" value="message" />
 		</div>
 		<div>
 			<button onClick="encodeBase64('value0');">encode</button>
@@ -31,7 +33,7 @@
 		</div>
 		<div>
 			<label for="result">result</label>
-			<textarea id="result" onfocus="this.select();" readonly></textarea>
+			<textarea id="result" onfocus="this.select();" style="height: auto;" readonly></textarea>
 		</div>
 	</main>
 
@@ -44,27 +46,12 @@
 		const encodeBase64 = (value0) => {
 			const response = invokeEncodeBase64(value0);
 			if (!validateResponse(response)) return;
-			refreshResult(response);
+			refreshResult(result, response);
 		}
 		const decodeBase64 = (value0) => {
 			const response = invokeDecodeBase64(value0);
 			if (!validateResponse(response)) return;
-			refreshResult(response);
-		}
-		const validateResponse = (response) => {
-			if (response == null || !("error" in response)) return true;
-			console.log("Go Wasm response", response);
-			alert(response.error);
-			return false;
-		}
-		const refreshResult = (response) => {
-			if (response == null || !("count" in response)) return;
-			result.innerHTML = "";
-			for (let i = 0; i < response.count; i++) {
-				if (0 < i) result.innerHTML += '\n'
-				result.innerHTML += response[`value${i}`];
-			}
-			result.select();
+			refreshResult(result, response);
 		}
 	</script>
 </body>
