--- a/crypto/index.html
+++ b/crypto/index.html
@@ -5,8 +5,10 @@
 	<meta charset="utf-8">
 	<link rel="icon" href="../favicon.ico">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="description" content="AES(SHA-256) encryptor">
+	<title>crypto</title>
 	<link href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css" rel="stylesheet">
-	<title>seventools</title>
+	<script src="../utils.js"></script>
 	<script src="../wasm_exec.js"></script>
 	<script>
 		const go = new Go();
@@ -16,18 +18,18 @@
 
 <body>
 	<header>
-		<h1>crypto</h1>
-		<p>AES(SHA-256) encryptor</p>
+		<h1 id="title"></h1>
+		<p id="description"></p>
 	</header>
 
 	<main>
 		<div>
 			<label for="value0">text</label>
-			<input type="text" id="value0" onfocus="this.select();" value="message" />
+			<input id="value0" type="text" onfocus="this.select();" value="message" />
 		</div>
 		<div>
 			<label for="value1">key</label>
-			<input type="text" id="value1" onfocus="this.select();" value="secret" />
+			<input id="value1" type="text" onfocus="this.select();" value="secret" />
 		</div>
 		<div>
 			<button onClick="encryptAES('value0', 'value1');">encrypt</button>
@@ -35,7 +37,7 @@
 		</div>
 		<div>
 			<label for="result">result</label>
-			<textarea id="result" onfocus="this.select();" readonly></textarea>
+			<textarea id="result" onfocus="this.select();" style="height: auto;" readonly></textarea>
 		</div>
 	</main>
 
@@ -48,27 +50,12 @@
 		const encryptAES = (value0, value1) => {
 			const response = invokeEncryptAES(value0, value1);
 			if (!validateResponse(response)) return;
-			refreshResult(response);
+			refreshResult(result, response);
 		}
 		const decryptAES = (value0, value1) => {
 			const response = invokeDecryptAES(value0, value1);
 			if (!validateResponse(response)) return;
-			refreshResult(response);
-		}
-		const validateResponse = (response) => {
-			if (response == null || !("error" in response)) return true;
-			console.log("Go Wasm response", response);
-			alert(response.error);
-			return false;
-		}
-		const refreshResult = (response) => {
-			if (response == null || !("count" in response)) return;
-			result.innerHTML = "";
-			for (let i = 0; i < response.count; i++) {
-				if (0 < i) result.innerHTML += '\n'
-				result.innerHTML += response[`value${i}`];
-			}
-			result.select();
+			refreshResult(result, response);
 		}
 	</script>
 </body>
