--- a/format/index.html
+++ b/format/index.html
@@ -5,8 +5,10 @@
 	<meta charset="utf-8">
 	<link rel="icon" href="../favicon.ico">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="description" content="Json Formatter">
+	<title>format</title>
 	<link href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css" rel="stylesheet">
-	<title>seventools</title>
+	<script src="../utils.js"></script>
 	<script src="../wasm_exec.js"></script>
 	<script>
 		const go = new Go();
@@ -16,8 +18,8 @@
 
 <body>
 	<header>
-		<h1>Format</h1>
-		<p>Json Formatter</p>
+		<h1 id="title"></h1>
+		<p id="description"></p>
 	</header>
 
 	<main>
@@ -36,7 +38,7 @@
 		</div>
 		<div>
 			<label for="result">result</label>
-			<textarea id="result" onfocus="this.select();" readonly></textarea>
+			<textarea id="result" onfocus="this.select();" style="height: auto;" readonly></textarea>
 		</div>
 	</main>
 
@@ -49,24 +51,7 @@
 		const formatJson = (value0) => {
 			const response = invokeFormatJson(value0);
 			if (!validateResponse(response)) return;
-			refreshResult(response);
-		}
-		const validateResponse = (response) => {
-			if (response == null || !("error" in response)) return true;
-			console.log("Go Wasm response", response);
-			alert(response.error);
-			return false;
-		}
-		const refreshResult = (response) => {
-			if (response == null || !("count" in response)) return;
-			result.innerHTML = "";
-			for (let i = 0; i < response.count; i++) {
-				if (0 < i) result.innerHTML += '\n'
-				result.innerHTML += response[`value${i}`];
-			}
-			result.select();
-			result.style.height = "auto";
-			result.style.height = `${result.scrollHeight}px`;
+			refreshResult(result, response);
 		}
 	</script>
 </body>
