--- a/base_encoding/index.html
+++ b/base_encoding/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="icon" href="../favicon.ico">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<meta name="description" content="Base64 encoder">
+	<meta name="description" content="Base encoder">
 	<title>base64</title>
 	<link href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css" rel="stylesheet">
 	<script src="../utils.js"></script>
@@ -28,12 +28,15 @@
 			<input id="value0" type="text" onfocus="this.select();" value="message" />
 		</div>
 		<div>
-			<button onClick="encodeBase64('value0');">encode</button>
-			<button onClick="decodeBase64('value0');">decode</button>
+			<button onClick="baseEncode('value0');">encode</button>
+			<button onClick="baseDecode('value0');">decode</button>
 		</div>
 		<div>
-			<label for="result">result</label>
-			<textarea id="result" onfocus="this.select();" style="height: auto;" readonly></textarea>
+			<h3>result</h3>
+			<label for="result0">Base32</label>
+			<input id="result0" onfocus="this.select();" style="width: 95%;" readonly></input>
+			<label for="result1">Base64</label>
+			<input id="result1" onfocus="this.select();" style="width: 95%;" readonly></input>
 		</div>
 	</main>
 
@@ -43,15 +46,17 @@
 	</footer>
 
 	<script>
-		const encodeBase64 = (value0) => {
-			const response = invokeEncodeBase64(value0);
+		const baseEncode = (value0) => {
+			const response = invokeBaseEncode(value0);
+			console.log("Go Wasm response", response);
 			if (!validateResponse(response)) return;
-			refreshResult(result, response);
+			refreshResultArray("result", response);
 		}
-		const decodeBase64 = (value0) => {
-			const response = invokeDecodeBase64(value0);
+		const baseDecode = (value0) => {
+			const response = invokeBaseDecode(value0);
+			console.log("Go Wasm response", response);
 			if (!validateResponse(response)) return;
-			refreshResult(result, response);
+			refreshResultArray("result", response);
 		}
 	</script>
 </body>
