deploy: e14fa109b51f16fa0cabc5b759be895a2b87cac4

--- a/base_encoding/index.html
+++ b/base_encoding/index.html
@@ -50,13 +50,13 @@
 			const response = invokeBaseEncode(value0);
 			console.log("Go Wasm response", response);
 			if (!validateResponse(response)) return;
-			refreshResultArray("result", response);
+			refreshResultInput("result", response);
 		}
 		const baseDecode = (value0) => {
 			const response = invokeBaseDecode(value0);
 			console.log("Go Wasm response", response);
 			if (!validateResponse(response)) return;
-			refreshResultArray("result", response);
+			refreshResultInput("result", response);
 		}
 	</script>
 </body>
