--- a/format/index.html
+++ b/format/index.html
@@ -52,7 +52,7 @@
 			const response = invokeFormatJson(value0);
 			console.log("Go Wasm response", response);
 			if (!validateResponse(response)) return;
-			refreshResult("result", response);
+			refreshResultTextArea("result", response);
 		}
 	</script>
 </body>
