--- a/hash/index.html
+++ b/hash/index.html
@@ -55,7 +55,7 @@
 			const response = invokeHash(value0);
 			console.log("Go Wasm response", response);
 			if (!validateResponse(response)) return;
-			refreshResultArray("result", response);
+			refreshResultInput("result", response);
 		}
 	</script>
 </body>
