--- a/random/index.html
+++ b/random/index.html
@@ -55,7 +55,7 @@
 			const response = invokeGeneratePassword(value0, value1, value2);
 			console.log("Go Wasm response", response);
 			if (!validateResponse(response)) return;
-			refreshResult("result", response);
+			refreshResultTextArea("result", response);
 		}
 	</script>
 </body>
