--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 
     <main>
         <ul>
+            <li><a href="./case/">case - Case converter</a></li>
+            <li><a href="./format/">format - Json formatter</a></li>
             <li><a href="./hash/">hash - Hashed values generator</a></li>
             <li><a href="./base_encoding/">base - Base encoder</a></li>
             <li><a href="./crypto/">crypto - AES256-GCM encryptor</a></li>
             <li><a href="./random/">random - Random values generator</a></li>
-            <li><a href="./format/">format - Json formatter</a></li>
         </ul>
     </main>
 
