--- a/base_encoding/index.html
+++ b/base_encoding/index.html
@@ -6,7 +6,7 @@
 	<link rel="icon" href="../favicon.ico">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="description" content="Base encoder">
-	<title>base64</title>
+	<title>base</title>
 	<link href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css" rel="stylesheet">
 	<script src="../utils.js"></script>
 	<script src="../wasm_exec.js"></script>
