deploy: 18a8d39797e7337fe4c865076da75ec18d00c61c

--- a/case/index.html
+++ b/case/index.html
@@ -28,7 +28,7 @@
 			<input id="value0" type="text" onfocus="this.select();" value="Hello World!__Bonjour le monde!" />
 		</div>
 		<div>
-			<button onClick="convertCase('value0');">hash</button>
+			<button onClick="convertCase('value0');">convert</button>
 		</div>
 		<div>
 			<h3>result</h3>
