deploy: e2d46c573ba6296195c0ae9fccaa6f520f984cb9

--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="icon" href="./favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="">
-    <title>seventools</title>
+    <meta name="description"
+        content="A easy-to-use toolkit for developers, offers support for case conversion, hashing, and Base encoding.">
+    <title>toolbox</title>
     <link href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css" rel="stylesheet">
+    <script src="utils.js"></script>
 </head>
 
 <body>
     <header>
-        <h1>tools</h1>
+        <h1 id="title"></h1>
+        <p id="description"></p>
     </header>
 
     <main>
@@ -28,7 +31,7 @@
 
     <footer>
         <p>Created using <a href="https://go.dev/" target="_blank">Go</a> and <a href="https://webassembly.org/"
-                target="_blank">Wasm</a>. Repository hosted on <a href="https://github.com/kawasawa/seventools/"
+                target="_blank">Wasm</a>. Repository hosted on <a href="https://github.com/kawasawa/toolbox/"
                 target="_blank">GitHub</a>.</p>
         <p>© <a href="https://kawasawa.github.io/" target="_blank">Kazuki Awasawa</a> All Rights Reserved.</p>
     </footer>
