deploy: e6f61ff73e9fbc226aeca7944037fe52bfc0f675

--- a/case/index.html
+++ b/case/index.html
@@ -32,17 +32,17 @@
 		</div>
 		<div>
 			<h3>result</h3>
-			<label for="result0">camel - camelCase</label>
+			<label for="result0">camelCase</label>
 			<input id="result0" onfocus="this.select();" style="width: 95%;" readonly></input>
-			<label for="result1">pascal - PascalCase</label>
+			<label for="result1">PascalCase</label>
 			<input id="result1" onfocus="this.select();" style="width: 95%;" readonly></input>
-			<label for="result2">snake - snake_case</label>
+			<label for="result2">snake_case</label>
 			<input id="result2" onfocus="this.select();" style="width: 95%;" readonly></input>
-			<label for="result3">kebab - kebab-case</label>
+			<label for="result3">kebab-case</label>
 			<input id="result3" onfocus="this.select();" style="width: 95%;" readonly></input>
-			<label for="result4">upper - UPPERCASE</label>
+			<label for="result4">UPPERCASE</label>
 			<input id="result4" onfocus="this.select();" style="width: 95%;" readonly></input>
-			<label for="result5">lower - lowercase</label>
+			<label for="result5">lowercase</label>
 			<input id="result5" onfocus="this.select();" style="width: 95%;" readonly></input>
 		</div>
 	</main>
