--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="./random/">random - Random values generator</a></li>
             <li><a href="./hash/">hash - Hashed values generator</a></li>
             <li><a href="./base_encoding/">base - Base encoder</a></li>
+            <li><a href="./jwt/">jwt - JWT decoder</a></li>
             <li><a href="./crypto/">crypto - AES256-GCM encryptor</a></li>
         </ul>
     </main>
