--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description"
-        content="A easy-to-use toolkit for developers, offers support for case conversion, hashing, and Base encoding.">
+        content="An easy-to-use development toolkit that provides support for case conversion, hashing, and Base encoding. All operations are performed within the browser, and no data is transmitted externally.">
     <title>toolbox</title>
     <link href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css" rel="stylesheet">
     <script src="utils.js"></script>
