--- a/index.html
+++ b/index.html
@@ -9,32 +9,27 @@
         content="An easy-to-use development toolkit that provides support for case conversion, hashing, and Base encoding. All operations are performed within the browser, and no data is transmitted externally.">
     <title>toolbox</title>
     <link href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css" rel="stylesheet">
-    <script src="utils.js"></script>
+    <link href="common.css" rel="stylesheet">
+    <script src="common.js" type="text/javascript"></script>
 </head>
 
 <body>
-    <header>
-        <h1 id="title"></h1>
-        <p id="description"></p>
-    </header>
-
+    <header id="layouts.header"></header>
     <main>
         <ul>
-            <li><a href="./case/">case - Case converter</a></li>
-            <li><a href="./format/">format - Json formatter</a></li>
-            <li><a href="./random/">random - Random values generator</a></li>
-            <li><a href="./hash/">hash - Hashed values generator</a></li>
-            <li><a href="./base_encoding/">base - Base encoder</a></li>
-            <li><a href="./jwt/">jwt - JWT decoder</a></li>
-            <li><a href="./crypto/">crypto - AES256-GCM encryptor</a></li>
+            <li><a href="case">case - Case converter</a></li>
+            <li><a href="format">format - Json formatter</a></li>
+            <li><a href="random">random - Random values generator</a></li>
+            <li><a href="hash">hash - Hashed values generator</a></li>
+            <li><a href="base">base - Base encoder</a></li>
+            <li><a href="jwt">jwt - JWT decoder</a></li>
+            <li><a href="crypto">crypto - AES256-GCM encryptor</a></li>
         </ul>
     </main>
-
-    <footer>
-        <p>Created using <a href="https://go.dev/" target="_blank">Go</a> and <a href="https://webassembly.org/"
-                target="_blank">Wasm</a>. Repository hosted on <a href="https://github.com/kawasawa/toolbox/"
-                target="_blank">GitHub</a>.</p>
-        <p>© <a href="https://kawasawa.github.io/" target="_blank">Kazuki Awasawa</a> All Rights Reserved.</p>
+    <footer id="layouts.footer">
+        <p> Repository hosted on
+            <a href="https://github.com/kawasawa/toolbox/" target="_blank">GitHub</a>.
+        </p>
     </footer>
 </body>
 
