--- a/crypto/index.html
+++ b/crypto/index.html
@@ -8,28 +8,22 @@
 	<meta name="description" content="AES256-GCM encryptor">
 	<title>crypto</title>
 	<link href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css" rel="stylesheet">
-	<script src="../utils.js"></script>
-	<script src="../wasm_exec.js"></script>
-	<script>
-		const go = new Go();
-		WebAssembly.instantiateStreaming(fetch("main.wasm"), go.importObject).then((source) => go.run(source.instance));
-	</script>
+	<link href="../common.css" rel="stylesheet">
+	<script src="../wasm_exec.js" type="text/javascript"></script>
+	<script src="../common.js" type="text/javascript"></script>
+	<script>goRun();</script>
 </head>
 
 <body>
-	<header>
-		<h1 id="title"></h1>
-		<p id="description"></p>
-	</header>
-
+	<header id="layouts.header"> </header>
 	<main>
 		<div>
 			<label for="value0">text</label>
-			<input id="value0" type="text" onfocus="this.select();" value="message" />
+			<input id="value0" onfocus="this.select();" value="message" />
 		</div>
 		<div>
 			<label for="value1">key</label>
-			<input id="value1" type="text" onfocus="this.select();" value="secret" />
+			<input id="value1" onfocus="this.select();" value="secret" />
 		</div>
 		<div>
 			<button onClick="encryptAES('value0', 'value1');">encrypt</button>
@@ -37,13 +31,11 @@
 		</div>
 		<div>
 			<label for="result0">result</label>
-			<input id="result0" onfocus="this.select();" style="width: 95%;" readonly></input>
+			<input id="result0" onfocus="this.select();" readonly></input>
 		</div>
 	</main>
-
-	<footer>
+	<footer id="layouts.footer">
 		<p><a href="../">return to home</a></p>
-		<p>© <a href="https://kawasawa.github.io/" target="_blank">Kazuki Awasawa</a> All Rights Reserved.</p>
 	</footer>
 
 	<script>
