--- a/format/index.html
+++ b/format/index.html
@@ -8,20 +8,14 @@
 	<meta name="description" content="Json Formatter">
 	<title>format</title>
 	<link href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css" rel="stylesheet">
-	<script src="../utils.js"></script>
-	<script src="../wasm_exec.js"></script>
-	<script>
-		const go = new Go();
-		WebAssembly.instantiateStreaming(fetch("main.wasm"), go.importObject).then((source) => go.run(source.instance));
-	</script>
+	<link href="../common.css" rel="stylesheet">
+	<script src="../wasm_exec.js" type="text/javascript"></script>
+	<script src="../common.js" type="text/javascript"></script>
+	<script>goRun();</script>
 </head>
 
 <body>
-	<header>
-		<h1 id="title"></h1>
-		<p id="description"></p>
-	</header>
-
+	<header id="layouts.header"></header>
 	<main>
 		<div>
 			<label for="value0">text</label>
@@ -38,13 +32,11 @@
 		</div>
 		<div>
 			<label for="result">result</label>
-			<textarea id="result" onfocus="this.select();" style="height: auto;" readonly></textarea>
+			<textarea id="result" onfocus="this.select();" readonly></textarea>
 		</div>
 	</main>
-
-	<footer>
+	<footer id="layouts.footer">
 		<p><a href="../">return to home</a></p>
-		<p>© <a href="https://kawasawa.github.io/" target="_blank">Kazuki Awasawa</a> All Rights Reserved.</p>
 	</footer>
 
 	<script>
