--- a/random/index.html
+++ b/random/index.html
@@ -8,46 +8,38 @@
 	<meta name="description" content="Random values generator">
 	<title>random</title>
 	<link href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css" rel="stylesheet">
-	<script src="../utils.js"></script>
-	<script src="../wasm_exec.js"></script>
-	<script>
-		const go = new Go();
-		WebAssembly.instantiateStreaming(fetch("main.wasm"), go.importObject).then((source) => go.run(source.instance));
-	</script>
+	<link href="../common.css" rel="stylesheet">
+	<script src="../wasm_exec.js" type="text/javascript"></script>
+	<script src="../common.js" type="text/javascript"></script>
+	<script>goRun();</script>
 </head>
 
 <body>
-	<header>
-		<h1 id="title"></h1>
-		<p id="description"></p>
-	</header>
-
+	<header id="layouts.header"></header>
 	<main>
 		<div>
 			<label for="value0">characters</label>
-			<input id="value0" type="text" onfocus="this.select();"
+			<input id="value0" onfocus="this.select();"
 				value="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz!#$%&()=-\@+*/>?'^~|`:;,._[]{}" />
 		</div>
 		<div>
 			<label for="value1">length</label>
-			<input id="value1" type="text" onfocus="this.select();" value="32" />
+			<input id="value1" onfocus="this.select();" value="32" />
 		</div>
 		<div>
 			<label for="value2">count</label>
-			<input id="value2" type="text" onfocus="this.select();" value="10" />
+			<input id="value2" onfocus="this.select();" value="10" />
 		</div>
 		<div>
 			<button onClick="generateRandom('value0', 'value1', 'value2');">generate</button>
 		</div>
 		<div>
 			<label for="result">result</label>
-			<textarea id="result" onfocus="this.select();" style="height: auto;" readonly></textarea>
+			<textarea id="result" onfocus="this.select();" readonly></textarea>
 		</div>
 	</main>
-
-	<footer>
+	<footer id="layouts.footer">
 		<p><a href="../">return to home</a></p>
-		<p>© <a href="https://kawasawa.github.io/" target="_blank">Kazuki Awasawa</a> All Rights Reserved.</p>
 	</footer>
 
 	<script>
