deploy: 977f2185715d19bb112568c1714ed6424823230d

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <main>
         <ul>
             <li><a href="case">case - Case converter</a></li>
-            <li><a href="format">format - Json formatter</a></li>
+            <li><a href="format">format - JSON formatter</a></li>
+            <li><a href="url">url - URL percent encoder</a></li>
             <li><a href="random">random - Random values generator</a></li>
             <li><a href="hash">hash - Hashed values generator</a></li>
             <li><a href="base">base - Base encoder</a></li>
