--- a/format/index.html
+++ b/format/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="icon" href="../favicon.ico">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<meta name="description" content="Json Formatter">
+	<meta name="description" content="JSON Formatter">
 	<title>format</title>
 	<link href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css" rel="stylesheet">
 	<link href="../common.css" rel="stylesheet">
