deploy: 816ec0ad57a5e8058f6ce31ba7810ba1f957b4f2

--- a/url/index.html
+++ b/url/index.html
@@ -19,7 +19,7 @@
 	<main>
 		<div>
 			<label for="value0">text</label>
-			<input id="value0" onfocus="this.select();" value="https://ja.wikipedia.org/wiki/パーセントエンコーディング" />
+			<input id="value0" onfocus="this.select();" value="メッセージ" />
 		</div>
 		<div>
 			<button onClick="encodeUrl('value0');">encode</button>
