deploy: 75afae328fec82747ce8d1ef2b0649a0102364c2

--- a/common/footer.html
+++ b/common/footer.html
@@ -3,4 +3,7 @@
     <img src="https://img.shields.io/badge/-Wasm-20127d.svg?logo=webassembly&style=flat" alt="Wasm" loading="lazy"
         decoding="async">
 </p>
-<p>© <a href="https://kawasawa.github.io/" target="_blank">Kazuki Awasawa</a> All Rights Reserved.</p>
+<p> Repository hosted on
+    <a href="https://github.com/kawasawa/toolbox/" target="_blank">GitHub</a>.<br />
+    © <a href="https://kawasawa.github.io/" target="_blank">Kazuki Awasawa</a> All Rights Reserved.
+</p>
