--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
             <li><a href="crypto">crypto - AES256-GCM encryptor</a></li>
         </ul>
     </main>
-    <footer id="layouts.footer">
-        <p> Repository hosted on
-            <a href="https://github.com/kawasawa/toolbox/" target="_blank">GitHub</a>.
-        </p>
-    </footer>
+    <footer id="layouts.footer"></footer>
 </body>
 
 </html>
