deploy: a5639c7582dfa1f8f2a8d674728cda0bc699a41d

--- a/common/footer.html
+++ b/common/footer.html
@@ -4,6 +4,6 @@
         decoding="async">
 </p>
 <p> Repository hosted on
-    <a href="https://github.com/kawasawa/toolbox/" target="_blank">GitHub</a>.<br />
+    <a href="https://github.com/kawasawa/" target="_blank">GitHub</a>.<br />
     © <a href="https://kawasawa.github.io/" target="_blank">Kazuki Awasawa</a> All Rights Reserved.
 </p>
